[package]
name = "compose-rt"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.11", default-features = false, features = ["std", "no-rng"] }
generational-box = "0.5.6"
slotmap = "1.0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "basic"
harness = false

[profile.release]
debug = true
