[package]
name = "compose-rt"
version = "0.19.0"
edition = "2021"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "A positional memoization runtime similar to Jetpack Compose Runtime."
categories = ["caching", "gui", "data-structures"]
keywords = ["memoization", "tree", "gui", "caching", "computation"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/cksac/compose-rt"
homepage = "https://github.com/cksac/compose-rt"


[dependencies]
generational-box = "0.6"
rustc-hash = "2.1"
slab = "0.4"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "basic"
harness = false

[profile.flamegraph]
inherits = "release"
debug = true
