[package]
name = "compose-derive"
version = "0.1.0"
edition = "2021"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "A positional memoization runtime similar to Jetpack Compose Runtime."
categories = ["caching", "gui", "data-structures"]
keywords = ["memoization", "tree", "gui", "caching", "computation"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/cksac/compose-rt"
homepage = "https://github.com/cksac/compose-rt"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
darling = "0.13"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"