[package]
name = "compose-rt"
version = "0.1.0"
edition = "2021"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "A positional memoization runtime similar to Jetpack Compose Runtime."
categories = ["Caching", "GUI", "Data structures"]
keywords = ["memoization", "tree", "gui", "caching", "computation"]
license = "MIT/Apache-2.0"
readme = "crates-io.md"
repository = "https://github.com/cksac/compose-rt"
homepage = "https://github.com/cksac/compose-rt"

[dependencies]
log = "0.4"

[dev-dependencies]
downcast-rs = "1.2.0"
env_logger = "0.6"
fake = "2.4"