[package]
name = "compose-rt"
version = "0.9.0"
edition = "2021"
authors = ["cksac <cs.cksac@gmail.com>"]
description = "A positional memoization runtime similar to Jetpack Compose Runtime."
categories = ["caching", "gui", "data-structures"]
keywords = ["memoization", "tree", "gui", "caching", "computation"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/cksac/compose-rt"
homepage = "https://github.com/cksac/compose-rt"

[dependencies]
compose-derive = { version = "0.1", path = '../compose-derive' }
log = "0.4"
downcast-rs = "1.2"


[dev-dependencies]
env_logger = "0.6"
fake = "2.4"